--- a/index.html
+++ b/index.html
@@ -210,6 +210,6 @@
                 </p>
             </div>
         </section>
-        <footer>Abdi Haryadi © 2025</footer>
+        <footer>M. Azis asmara © 2026</footer>
     </body>
 </html>
