--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <body>
         <header id="beranda">
             <img src="foto.webp" alt="Foto Profil" />
-            <h1>Hai, saya Azis! Selamat datang~</h1>
+            <h1>Hai, saya Azis!</h1>
             <nav>
                 <a href="#profil">Profil</a>
                 <a href="#media">Media Lain</a>
