--- a/index.html
+++ b/index.html
@@ -183,12 +183,10 @@
             <div class="card">
                 <h2>Media Lain</h2>
                 <ul class="media-list">
-                    <li>Geometry Dash: <a href="#">AbdiHaryadi</a></li>
-                    <li>GitHub: <a href="#">AbdiHaryadi</a></li>
-                    <li>Instagram: <a href="#">abdiharyadi</a></li>
-                    <li>itch.io: <a href="#">abdiharyadi</a></li>
-                    <li>LinkedIn: <a href="#">Abdi Haryadi</a></li>
-                    <li>YouTube: <a href="#">Abdi Haryadi</a></li>
+                    <li>GitHub: <a href="#">mazisasmara</a></li>
+                    <li>Instagram: <a href="#">mhmmdazssss</a></li
+                    <li>LinkedIn: <a href="#">M. Azis asmara</a></li>
+                    <li>YouTube: <a href="#">M. Azis asmara</a></li>
                 </ul>
             </div>
         </section>
