--- a/index.html
+++ b/index.html
@@ -183,10 +183,10 @@
             <div class="card">
                 <h2>Media Lain</h2>
                 <ul class="media-list">
-                    <li>GitHub: <a href="#">mazisasmara</a></li>
-                    <li>Instagram: <a href="#">mhmmdazssss</a></li
-                    <li>LinkedIn: <a href="#">M. Azis asmara</a></li>
-                    <li>YouTube: <a href="#">M. Azis asmara</a></li>
+                    <li>GitHub: <a href="https://github.com/mazisasmara">mazisasmara</a></li>
+                    <li>Instagram: <a href="https://www.instagram.com/mhmmdazssss?igsh=MWd4bXVmMzlzcDhpNQ==">mhmmdazssss</a></li
+                    <li>LinkedIn: <a href="#" script="alert('Proses ;)')" >M. Azis asmara</a></li>
+                    <li>YouTube: <a href="#" script="alert('Proses ;)')" >M. Azis asmara</a></li>
                 </ul>
             </div>
         </section>
