update index.html menganti beberapa tampilan

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>Portofolio Azis</title>
         <style>
             :root {
-                --bg: #c9c9ff;
-                --primary: #5a4fcf;
+                --bg: #eef2ff;
+                --primary: #4f46e5;
                 --text: #1f1f1f;
                 --card: #ffffff;
             }
@@ -184,9 +184,9 @@
                 <h2>Media Lain</h2>
                 <ul class="media-list">
                     <li>GitHub: <a href="https://github.com/mazisasmara">mazisasmara</a></li>
-                    <li>Instagram: <a href="https://www.instagram.com/mhmmdazssss?igsh=MWd4bXVmMzlzcDhpNQ==">mhmmdazssss</a></li
-                    <li>LinkedIn: <a href="#" script="alert('Proses ;)')" >M. Azis asmara</a></li>
-                    <li>YouTube: <a href="#" script="alert('Proses ;)')" >M. Azis asmara</a></li>
+                    <li>Instagram: <a href="https://www.instagram.com/mhmmdazssss?igsh=MWd4bXVmMzlzcDhpNQ==">mhmmdazssss</a></li>
+                    <li>LinkedIn: <a href="#" onclick="alert('Proses ;)')" >M. Azis asmara</a></li>
+                    <li>YouTube: <a href="#" onclick="alert('Proses ;)')" >M. Azis asmara</a></li>
                 </ul>
             </div>
         </section>
